# Cognitive-Robotics-Project

./: .gitignore  Active Contour.ppt  Active Contour.pptx  Make all working  README.md  ROS_STEPS  libPvAPI.conf
ComputerVision/: CMakeCache.txt  CMakeLists.txt  Cognitive-Robotics-Project  Makefile  cmake_install.cmake  main.cpp
ComputerVision/include/: Camera.h
ComputerVision/include/chanvese/: chanvese.h  chanvesecli.h
ComputerVision/lib/: Camera.cpp  Chanvese.c  Chanvese.h  Contour.c  Contour.h
ComputerVision/lib/chanvese/: chanvese.cpp  chanvesecli.cpp  cliio.cpp
ComputerVision/lib/chanvese_20120715/: animotion  chanvese  chanvese.c  chanvese.h  chanvesecli.c  chanvesecli_new.c  cliio.c  doxygen.conf  gifwrite.c  gifwrite.h  imageio.c  jpg  light_main.c  makefile.gcc  makefile.vc  readme.txt  rgb2ind.c  rgb2ind.h  test_image.txt
ComputerVision/lib/chanvese_new/: chanvesecli.c  chanvesecli.h  cliio.c  cliio.h
ComputerVision/libs/chanvese/: chanvese.c  chanvese.h  chanvesecli.c  chanvesecli.h  cliio.c  cliio.h  contour.c  contour.h
ComputerVision/nbproject/: configurations.xml  project.xml
ComputerVision/nbproject/private/: configurations.xml  private.xml
ComputerVision/src/: Camera.cpp
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/include/active_contour/: snake.h
catkin_ws/devel/include/beginner_tut/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/include/prosilica_camera/: ProsilicaCameraConfig.h
catkin_ws/devel/lib/active_contour/: main  prova  prova1
catkin_ws/devel/lib/beginner_tut/: add_two_ints_client  add_two_ints_server  listener  talker
catkin_ws/devel/lib/get_polygon/: get
catkin_ws/devel/lib/pkgconfig/: active_contour.pc  beginner_tut.pc  get_polygon.pc  prosilica_camera.pc  prosilica_gige_sdk.pc  usb_cam.pc  webcam_test.pc
catkin_ws/devel/lib/prosilica_camera/: prosilica_node  read_memory  set_inhibition  set_ip  write_memory
catkin_ws/devel/lib/usb_cam/: usb_cam_node
catkin_ws/devel/share/active_contour/cmake/: active_contour-msg-extras.cmake  active_contour-msg-paths.cmake  active_contourConfig.cmake
catkin_ws/devel/share/beginner_tut/cmake/: beginner_tut-msg-extras.cmake  beginner_tut-msg-paths.cmake  beginner_tutConfig.cmake
catkin_ws/devel/share/get_polygon/cmake/: get_polygonConfig.cmake
catkin_ws/devel/share/prosilica_camera/cmake/: prosilica_cameraConfig.cmake
catkin_ws/devel/share/prosilica_camera/docs/: ProsilicaCameraConfig-usage.dox  ProsilicaCameraConfig.dox  (+1 more)
catkin_ws/src/active_contour/: CMakeLists.txt  package.xml
catkin_ws/src/active_contour/include/active_contour/: Camera.h  snake.h
catkin_ws/src/active_contour/libs/chanvese/: chanvese.c
catkin_ws/src/active_contour/msg/: snake.msg
catkin_ws/src/active_contour/src/: Camera.cpp  main.cpp  prova.cpp  prova1.cpp
catkin_ws/src/active_contour/src/src/: Camera.cpp
catkin_ws/src/beginner_tut/: CMakeLists.txt  CMakeLists.txt.save
catkin_ws/src/beginner_tut/src/: adder_client.cpp  adder_server.cpp  listener.cpp  talker.cpp
catkin_ws/src/get_polygon/: CMakeLists.txt
catkin_ws/src/get_polygon/src/: get.cpp
(+22 files in other folders)
